Bug 504579 -  Add-on description and "Add to Firefox" button are hidden by the screenshot when window is too narrow, r=jbalogh
git-svn-id: http://svn.mozilla.org/addons/trunk@30301 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main-mozilla.css
+++ b/site/app/webroot/css/amo2009/main-mozilla.css
@@ -814,6 +814,19 @@ h4.author a {
     content: "";
 }
 
+#addon-summary-wrapper {
+    float: right;
+    width: 100%;
+    margin-left: -25em;
+}
+
+#addon-summary {
+    margin-left: 230px;
+    float: none;
+    width: auto;
+    display: block;
+}
+
 .html-rtl #addon-summary {
     margin-left: 0;
     margin-right: 240px;
